<resources>
    <string name="app_name">LED_Changer</string>
    <string name="action_settings">Settings</string>

    <string name="button_1">A</string>
    <string name="button_2">B</string>
    <string name="button_3">C</string>
    <string name="button_4">D</string>
    <string name="button_5">E</string>
    <string name="button_6">F</string>
    <string name="button_7">G</string>
    <string name="button_8">H</string>
    <string name="button_9">I</string>
    <string name="button_10">J</string>
    <string name="button_11">K</string>
    <string name="button_12">L</string>
    <string name="button_13">M</string>
    <string name="button_14">N</string>
    <string name="button_15">O</string>
    <string name="button_16">P</string>
    <string name="button_17">Q</string>
    <string name="button_18">R</string>
    <string name="button_19">S</string>
    <string name="button_20">T</string>
    <string name="button_21">U</string>
    <string name="button_22">V</string>
    <string name="button_23">W</string>
    <string name="button_24">X</string>
    <string name="button_25">Y</string>
    <string name="button_26">Z</string>

    <string name="enter_button">Play</string>
    <string name="word_hint">Enter text here</string>
    <string name="speed">Speed</string>
    <string name="channel_name">channel_1</string>
    <string name="channel_description">channel_1_desc</string>
</resources>
